# learn-openmpi

01-hello/: README.md  main  main.c
02-round_robin/: CMakeLists.txt  README.md  build.sh  main.cpp
02-round_robin/include/: helpers.hpp  round_robin.h
02-round_robin/src/: helpers.cpp  round_robin.cpp  round_robin_sr.cpp
03-broad_barrier/: CMakeLists.txt  README.md  main.cpp
03-broad_barrier/include/: broad_barrier.hpp
03-broad_barrier/src/: broad_barrier.cpp
04-non_block_one_to_many/: CMakeLists.txt  README.md  build.sh  main.cpp
04-non_block_one_to_many/include/: non_block_one_to_many.hpp
04-non_block_one_to_many/src/: non_block_one_to_many.cpp
05-topologies/: CMakeLists.txt  README.md  build.sh  main.cpp
05-topologies/include/: cart-topo.hpp  helpers.hpp
05-topologies/src/: cart-topo.cpp  helpers.cpp
06-cuda-square/: README.md  main.cu
07-matrix_vector_multiplication/: CMAKElists.txt  README.md  data.txt  main.c
07-matrix_vector_multiplication/include/: MPI_Mat_vect_mult_row.h  MPI_Mat_vect_read_file.h  MPI_Mat_vect_scatter_row.h  Mat_vect_create.h  Mat_vect_mult.h  Mat_vect_read_file.h
07-matrix_vector_multiplication/src/: MPI_Mat_vect_mult_row.c  MPI_Mat_vect_read_file.c  MPI_Mat_vect_scatter_row.c  Mat_vect_create.c  Mat_vect_mult.c  Mat_vect_read_file.c
08-floyd_warshall/: CMAKElists.txt  README.md  main.c
08-floyd_warshall/include/: GRAPH_max_edges.h  GRAPH_random_graph.h  GRAPH_shortest_paths_floyd_warshall.h  MPI_GRAPH_shortest_paths_floyd_warshall.h  flatten_2D_double.h
08-floyd_warshall/src/: GRAPH_max_edges.c  GRAPH_random_graph.c  GRAPH_shortest_paths_floyd_warshall.c  MPI_GRAPH_shortest_paths_floyd_warshall.c  flatten_2D_double.c
